# cpp_robot_basic

./: .gitignore  CMakeLists.txt  README.md
task1/: hello_robot  hello_robot.cpp
task2/: producer_consumer.cpp  smart_ptr  smart_ptr.cpp  stl_practice.cpp
task2/cmake_demo/: CMakeLists.txt
task2/cmake_demo/include/: word_counter.h
task2/cmake_demo/src/: main.cpp  word_counter.cpp
task2/thread_singleton/: CMakeLists.txt
task2/thread_singleton/include/: thread_singleton.h
task2/thread_singleton/src/: main.cpp  thread_singleton.cpp
task2/threadpool/: CMakeLists.txt
task2/threadpool/include/: ThreadPool.h
task2/threadpool/src/: main.cpp
task3/: adapters_practice.cpp  class_basics.cpp  const_practice.cpp  constexpr_concepts.cpp  inheritance_basics.cpp  move_semantics.cpp  nvi_pattern.cpp  optional_variant.cpp  perfect_forwarding.cpp  polymorphism_practice.cpp  ranges_examples.cpp  smart_pointers.cpp  static_member.cpp  stl_algorithms.cpp  template_basics.cpp
task4/cmake_tutorial/: CMakeLists.txt
task4/cmake_tutorial/include/: librobot.h  math_utils.h
task4/cmake_tutorial/src/: librobot.cpp  main.cpp  math_utils.cpp
task5/: challenges.md
